[bdist_wheel]
universal = 1

[metadata]
name = lalr
version = attr: lalr.__version__
license = BSD
license_file = LICENSE
description = A pure python LALR parser generator"
long_description = file: README.rst
author = Ben Mather
author_email = bwhmather@bwhmather.com
maintainer = Ben Mather
maintainer_email = bwhmather@bwhmather.com
url = https://github.com/bwhmather/python-lalr
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
package_dir=
    =src
packages = find:

install_requires=
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
